# mass-email

./: .gitignore  Cargo.toml  contents.json  email.txt
src/: main.rs
